# baraja-coffe

./: .dockerconfigjson  .dockerignore  .env  .env.example  .gitignore  .nodemonignore  00_READ_ME_FIRST.md  API_DOCUMENTATION.md  AUDIT_COMPLETE_SUMMARY.md  BACKEND_HOTFIX_COMPLETE.md  DOCUMENT_MAP_AND_NAVIGATION.md  Dockerfile  FRAUD_ANALYSIS_SUMMARY.md  FRAUD_PREVENTION_CODE_FIXES.md  FRAUD_VULNERABILITY_COMPLETE_SUMMARY.md  HOTFIX_COMPLETE_SUMMARY.md  IMPLEMENTATION_QUICKSTART.md  INDEX_FRAUD_PREVENTION.md  MOBILE_APP_FRAUD_ANALYSIS.md  MOBILE_APP_FRAUD_FIXES.md  ORDER_CONTROLLER_FRAUD_FINDINGS.md  ORDER_CONTROLLER_FRAUD_FIXES.md  ORDER_CONTROLLER_SUMMARY.md  SECURITY_FRAUD_ANALYSIS.md  bash.exe.stackdump  debug_gro_orders.js  debug_outlets.js  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  nodemon.json  package-lock.json  package.json  readme.txt  test_checker.js  test_concat.js  test_db_math.js  test_discount.js  test_double_count.js  (+11 more)
api/rust-kafka-migration/: .env.development  .env.production  .gitignore  Cargo.toml  ENVIRONMENT.md  QUICK_START.md  README.md  build_error.txt  cargo_check.out  cargo_check_output.txt  check_errors.txt  check_log.txt  docker-compose.yml  run-dev.ps1  run-dev.sh  run-prod.ps1  run-prod.sh
api/rust-kafka-migration/readme/: advanced_pos_walkthrough.md  auth_module_migration.md.resolved  complete_api_docs.md  implementation_plan.md  implementation_plan.md.resolved  pos_implementation_plan.md  reporting_api_docs.md  stock_deduction_walkthrough.md  walkthrough.md.resolved
api/rust-kafka-migration/src/: main.rs
api/rust-kafka-migration/src/common/: mod.rs
api/rust-kafka-migration/src/config/: mod.rs
api/rust-kafka-migration/src/db/: connection.rs  mod.rs
api/rust-kafka-migration/src/db/models/: analytics.rs  area.rs  category.rs  device.rs  event.rs  hr_attendance.rs  loyalty.rs  (+29 more)
api/rust-kafka-migration/src/error/: mod.rs
api/rust-kafka-migration/src/handlers/: analytics.rs  auth.rs  category.rs  customer_report.rs  device.rs  event.rs  export_report.rs  inventory.rs  marketlist.rs  menu.rs  mod.rs  order.rs  order_operations.rs  outlet.rs  printer.rs  product.rs  profit_loss_report.rs  promo.rs  recipe.rs  sales_report.rs  stock_management.rs  supplier.rs  table_management.rs  tax.rs  voucher.rs  webhook.rs  workstation.rs
api/rust-kafka-migration/src/kafka/: events.rs  mod.rs  producer.rs
api/rust-kafka-migration/src/middleware/: auth.rs  hr_middleware.rs  mod.rs
api/rust-kafka-migration/src/routes/: advanced_pos_routes.rs  category.rs  device_routes.rs  event.rs  hr.rs  mod.rs  pos_routes.rs  promo.rs  recipe.rs  report.rs  report_routes.rs  stock_routes.rs  tax.rs  voucher.rs  webhook_routes_new.rs  websocket_routes.rs
api/rust-kafka-migration/src/services/: event_service.rs  inventory_service.rs  loyalty_service.rs  marketlist_service.rs  menu_service.rs  mod.rs  order_service.rs  outlet_service.rs  print_queue_service.rs  print_service.rs  promo_service.rs  session_service.rs  stock_deduction_service.rs  tax_service.rs
api/rust-kafka-migration/src/utils/: code_generator.rs  date_utils.rs  jwt.rs  lock.rs  mod.rs  serde_utils.rs  timezone.rs
api/rust-kafka-migration/src/websocket/: area_socket.rs  broadcaster.rs  device_socket.rs  events.rs  handler.rs  manager.rs  mod.rs  socket_state.rs
(+1350 files in other folders)
