[package]
name = "baraja-coffee-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - MongoDB
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "bson-chrono-0_4"] }
bson = { version = "2.9", features = ["chrono-0_4"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }

# Date/Time (WIB timezone support)
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# UUID Generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# HTTP Client (for external APIs: Midtrans, Xendit, GoSend, FCM)
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Redis (for locks and caching)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment
once_cell = "1.19"

# WebSocket


# Job Scheduling
tokio-cron-scheduler = "0.10"

[dev-dependencies]
# Testing
mockall = "0.12"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
