[package]
name = "baraja-coffee-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.7.9"
axum-tungstenite = "0.1.1"
bcrypt = "0.15.1"
bson = { version = "2.15.0", features = ["chrono-0_4", "serde_with"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.8.6"
config = "0.14.1"
dotenvy = "0.15.7"
dashmap = "5.5"
futures = "0.3.31"
futures-util = "0.3"
jsonwebtoken = "9.3.1"
mockall = "0.12.1"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
once_cell = "1.21.3"
rand = "0.8"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
reqwest = { version = "0.11.27", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
tokio-util = "0.7.17"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full", "fs"] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
wiremock = "0.6.5"
